# algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  internal.cmake
DataStructures/List/: CMakeLists.txt  List.c  ListTests.cpp
Include/DataStructures/: List.h
Src/: CMakeLists.txt
Src/DataStructures/: CMakeLists.txt
Src/DataStructures/List/: List.c
Src/Include/: types.h
